--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>560</width>
-    <height>510</height>
+    <height>524</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -63,7 +63,7 @@
          <x>0</x>
          <y>0</y>
          <width>560</width>
-         <height>392</height>
+         <height>384</height>
         </rect>
        </property>
        <attribute name="label">
@@ -87,34 +87,28 @@
         </property>
         <item>
          <widget class="QGroupBox" name="groupBox1">
-          <layout class="QVBoxLayout" name="verticalLayout_7">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <property name="leftMargin">
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <property name="margin">
             <number>6</number>
-           </property>
-           <property name="topMargin">
-            <number>3</number>
-           </property>
-           <property name="rightMargin">
-            <number>6</number>
-           </property>
-           <property name="bottomMargin">
-            <number>3</number>
            </property>
            <item>
-            <widget class="QSplitter" name="spl_setup_inout_rules">
+            <widget class="QSplitter" name="spl_VarsRules">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
-             <widget class="QSplitter" name="spl_setup_inout">
+             <widget class="QSplitter" name="splVariables">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
-              <widget class="QWidget" name="layoutWidget">
-               <layout class="QVBoxLayout" name="verticalLayout_2">
+              <widget class="QWidget" name="verticalLayoutWidget_4">
+               <layout class="QVBoxLayout" name="verticalLayout_7">
                 <property name="spacing">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
                  <number>0</number>
                 </property>
                 <item>
@@ -183,20 +177,28 @@
                  </layout>
                 </item>
                 <item>
-                 <widget class="QListWidget" name="lvw_inputs">
-                  <property name="selectionMode">
-                   <enum>QAbstractItemView::ExtendedSelection</enum>
+                 <widget class="QSplitter" name="splInput">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
                   </property>
-                  <property name="selectionBehavior">
-                   <enum>QAbstractItemView::SelectRows</enum>
-                  </property>
+                  <widget class="QListWidget" name="lvw_inputs">
+                   <property name="selectionMode">
+                    <enum>QAbstractItemView::ExtendedSelection</enum>
+                   </property>
+                   <property name="selectionBehavior">
+                    <enum>QAbstractItemView::SelectRows</enum>
+                   </property>
+                  </widget>
                  </widget>
                 </item>
                </layout>
               </widget>
-              <widget class="QWidget" name="layoutWidget1">
-               <layout class="QVBoxLayout" name="verticalLayout_3">
+              <widget class="QWidget" name="verticalLayoutWidget_3">
+               <layout class="QVBoxLayout" name="verticalLayout_2">
                 <property name="spacing">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
                  <number>0</number>
                 </property>
                 <item>
@@ -265,13 +267,18 @@
                  </layout>
                 </item>
                 <item>
-                 <widget class="QListWidget" name="lvw_outputs">
-                  <property name="selectionMode">
-                   <enum>QAbstractItemView::ExtendedSelection</enum>
+                 <widget class="QSplitter" name="splOutput">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
                   </property>
-                  <property name="selectionBehavior">
-                   <enum>QAbstractItemView::SelectRows</enum>
-                  </property>
+                  <widget class="QListWidget" name="lvw_outputs">
+                   <property name="selectionMode">
+                    <enum>QAbstractItemView::ExtendedSelection</enum>
+                   </property>
+                   <property name="selectionBehavior">
+                    <enum>QAbstractItemView::SelectRows</enum>
+                   </property>
+                  </widget>
                  </widget>
                 </item>
                </layout>
@@ -724,16 +731,35 @@
    <addaction name="actionAbout"/>
    <addaction name="actionQuit"/>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>560</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="defaultUp">
+    <bool>true</bool>
+   </property>
+   <widget class="QMenu" name="menuTools">
+    <property name="title">
+     <string>Tools</string>
+    </property>
+   </widget>
+   <addaction name="menuTools"/>
+  </widget>
   <action name="actionConfigure">
    <property name="icon">
     <iconset resource="resources.qrc">
      <normaloff>:/icons/configure.png</normaloff>:/icons/configure.png</iconset>
    </property>
    <property name="text">
-    <string>Configure</string>
+    <string>Preferences</string>
    </property>
    <property name="toolTip">
-    <string>Configure</string>
+    <string>Preferences</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+;</string>
