--- a/qtfuzzylite/ui/About.ui
+++ b/qtfuzzylite/ui/About.ui
@@ -43,7 +43,7 @@
        <number>6</number>
       </property>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="lbl_header">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -51,28 +51,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>&lt;html&gt;
-&lt;div align='center'&gt;
-&lt;table&gt;
-&lt;tr &gt;
-&lt;td align='center' valign='middle'&gt;&lt;a href='http://www.fuzzylite.com'&gt;&lt;img src=&quot;:/icons/qtfuzzylite.svg&quot;/&gt;&lt;/a&gt;
-&lt;/td&gt;
-&lt;td align='left' valign='top'&gt;&lt;b&gt;qtfuzzylite v.2.0 (02/2013)&lt;/b&gt; 
-&lt;br&gt;
-&lt;b&gt;fuzzylite v.2.0 (02/2013)&lt;/b&gt;
-&lt;br&gt;
-&lt;/b&gt;
-&lt;a href=&quot;http://www.fuzzylite.com&quot;&gt;www.fuzzylite.com&lt;/a&gt;
-&lt;br&gt;
-&lt;br&gt;
-Developed by Juan Rada-Vilela
-&lt;br&gt;
-&lt;a href=&quot;mailto:jcrada@fuzzylite.com&quot;&gt;jcrada@fuzzylite.com&lt;/a&gt;&lt;/td&gt;
-
-&lt;/tr&gt;
-&lt;/table&gt;
-&lt;/div&gt;
-&lt;/html&gt;</string>
+         <string/>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
