--- a/qtfuzzylite/ui/Preferences.ui
+++ b/qtfuzzylite/ui/Preferences.ui
@@ -40,20 +40,23 @@
      </property>
      <item row="5" column="1">
       <widget class="QSpinBox" name="sbx_divisions">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
        <property name="minimum">
-        <number>10</number>
+        <number>20</number>
        </property>
        <property name="maximum">
         <number>9999999</number>
        </property>
        <property name="singleStep">
-        <number>50</number>
+        <number>20</number>
        </property>
        <property name="value">
-        <number>100</number>
+        <number>500</number>
        </property>
       </widget>
      </item>
@@ -65,7 +68,11 @@
       </widget>
      </item>
      <item row="4" column="1">
-      <widget class="QComboBox" name="cbx_defuzzifier"/>
+      <widget class="QComboBox" name="cbx_defuzzifier">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+      </widget>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="lbl_defuzzifier">
@@ -75,7 +82,11 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QComboBox" name="cbx_accumulation"/>
+      <widget class="QComboBox" name="cbx_accumulation">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+      </widget>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="lbl_aggregation">
@@ -85,7 +96,11 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QComboBox" name="cbx_activation"/>
+      <widget class="QComboBox" name="cbx_activation">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="lbl_activation">
@@ -96,6 +111,9 @@
      </item>
      <item row="1" column="1">
       <widget class="QComboBox" name="cbx_snorm">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="currentIndex">
         <number>-1</number>
        </property>
@@ -110,6 +128,9 @@
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="cbx_tnorm">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="currentIndex">
         <number>-1</number>
        </property>
@@ -217,6 +238,20 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>cbx_tnorm</tabstop>
+  <tabstop>cbx_snorm</tabstop>
+  <tabstop>cbx_activation</tabstop>
+  <tabstop>cbx_accumulation</tabstop>
+  <tabstop>cbx_defuzzifier</tabstop>
+  <tabstop>sbx_divisions</tabstop>
+  <tabstop>ckx_not</tabstop>
+  <tabstop>ckx_very</tabstop>
+  <tabstop>ckx_somewhat</tabstop>
+  <tabstop>ckx_any</tabstop>
+  <tabstop>ckx_extremely</tabstop>
+  <tabstop>ckx_seldom</tabstop>
+ </tabstops>
  <resources>
   <include location="resources.qrc"/>
  </resources>
